test/sema/non_void_main.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: 'main' function is expected to return 'void'
fn main(): number {}
